# ceia-vision_por_computadora_tp2

./: .gitignore  README.md  environment.yml  focus_metrics.py  pyproject.toml  requirements.txt
