[project]
name = "Tp2"
version = "0.1.0"
description = "Trabajo Práctico para la materia de Vision por computadora I - CEIA FIUBA"
authors = [
    {name = "Santiago Bartolini Rizzo"},
    {name = "Luis Ali"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "requests>=2.32.3,<3.0.0",
    "sqlalchemy>=2.0.38,<3.0.0",
    "pandas>=2.1.4,<2.2.0",
    "ydata-profiling>=4.12.2,<5.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "seaborn>=0.13.2,<0.14.0",
    "scipy>=1.6.1,<=1.11.4",
    "numpy>1.26.3,<=1.26.4",
    "scikit-learn>=0.24,<1.5.0",
    "ipykernel>=6.29.5,<7.0.0",
    "beautifulsoup4>=4.13.3,<5.0.0",
    "jupyter>=1.1.1,<2.0.0",
    "missingno>=0.5.2,<0.6.0",
    "imblearn>=0.0,<0.1",
    "librosa>=0.11.0,<0.12.0",
    "sweetviz>=2.3.1,<3.0.0",
    "category-encoders>=2.6.0,<3.0.0",
    "pycaret>=3.3.2,<4.0.0",
    "tensorflow>=2.19.0,<3.0.0",
    "nltk>=3.9.1,<4.0.0",
    "rasterio>=1.4.3,<2.0.0",
    "polars (>=1.40.0,<2.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "optuna (>=4.8.0,<5.0.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    # Dependencias específicas para TP2 - Focus Detection
    "opencv-python>=4.5.0,<5.0.0",
]

[tool.poetry]
name = "ceia-vision_por_computadora_tp2"
version = "0.1.0"
description = "Trabajo 2 Práctico para la materia Visión por computadora I - CEIA FIUBA"
authors = ["Santiago Bartolini Rizzo", "Luis Ali"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = ">=2.32.3,<3.0.0"
sqlalchemy = ">=2.0.38,<3.0.0"
pandas = ">=2.1.4,<2.2.0"
ydata-profiling = ">=4.12.2,<5.0.0"
matplotlib = ">=3.7.0,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
scipy = ">=1.6.1,<=1.11.4"
numpy = ">1.26.3,<=1.26.4"
scikit-learn = ">=0.24,<1.5.0"
ipykernel = ">=6.29.5,<7.0.0"
beautifulsoup4 = ">=4.13.3,<5.0.0"
jupyter = ">=1.1.1,<2.0.0"
missingno = ">=0.5.2,<0.6.0"
imblearn = ">=0.0,<0.1"
librosa = ">=0.11.0,<0.12.0"
sweetviz = ">=2.3.1,<3.0.0"
category-encoders = ">=2.6.0,<3.0.0"
pycaret = ">=3.3.2,<4.0.0"
tensorflow = ">=2.19.0,<3.0.0"
nltk = ">=3.9.1,<4.0.0"
rasterio = ">=1.4.3,<2.0.0"
# Dependencias específicas para TP2 - Focus Detection
opencv-python = ">=4.5.0,<5.0.0"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = []